0033398: Modeling Algorithms - ShapeUpgrade_UnifySameDomain throws exception on specific STEP model

Added additional checking in static method FindCoordBounds to avoid processing null pcurves